--- a/TTkCore/color.html
+++ b/TTkCore/color.html
@@ -51,8 +51,8 @@
 # SOFTWARE.
 
 from TermTk.TTkCore.log import TTkLog
-from TermTk.TTkCore.cfg import *
-from TermTk.TTkCore.helper import *
+from TermTk.TTkCore.cfg import TTkCfg
+from TermTk.TTkCore.helper import TTkHelper
 
 # Ansi Escape Codes:
 # https://conemu.github.io/en/AnsiEscapeCodes.html
