--- a/TTkCore/helper.html
+++ b/TTkCore/helper.html
@@ -52,8 +52,8 @@
 
 import TermTk.libbpytop as lbt
 from TermTk.TTkCore.log import TTkLog
-from TermTk.TTkCore.cfg import *
-from TermTk.TTkCore.constant import *
+from TermTk.TTkCore.cfg import TTkCfg, TTkGlbl
+from TermTk.TTkCore.constant import TTkK
 
 class TTkHelper:
     # TODO: Add Setter/Getter
@@ -113,6 +113,7 @@ class TTkHelper:
     @staticmethod
     def registerRootCanvas(canvas):
         TTkHelper._rootCanvas = canvas
+        TTkHelper._rootCanvas.enableDoubleBuffer()
         TTkHelper._updateBuffer = []
         TTkHelper._updateWidget = []
 
@@ -152,6 +153,7 @@ class TTkHelper:
         &#39;&#39;&#39;
         if TTkHelper._rootCanvas is None:
             return
+
         # Build a list of buffers to be repainted
         updateBuffers = TTkHelper._updateBuffer.copy()
         updateWidgets = TTkHelper._updateWidget.copy()
@@ -206,12 +208,14 @@ class TTkHelper:
         if pushToTerminal:
             if TTkHelper._cursor:
                 lbt.Term.hideCursor()
-            TTkHelper._rootCanvas.pushToTerminal(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
+            if TTkCfg.doubleBuffer:
+                TTkHelper._rootCanvas.pushToTerminalBuffered(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
+            else:
+                TTkHelper._rootCanvas.pushToTerminal(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
             if TTkHelper._cursor:
                 x,y = TTkHelper._cursorPos
                 lbt.Term.push(lbt.Mv.to(y+1,x+1))
                 lbt.Term.showCursor(TTkHelper._cursorType)
-
 
     @staticmethod
     def widgetDepth(widget) -&gt; int:
@@ -346,6 +350,7 @@ class TTkHelper:
     @staticmethod
     def registerRootCanvas(canvas):
         TTkHelper._rootCanvas = canvas
+        TTkHelper._rootCanvas.enableDoubleBuffer()
         TTkHelper._updateBuffer = []
         TTkHelper._updateWidget = []
 
@@ -385,6 +390,7 @@ class TTkHelper:
         &#39;&#39;&#39;
         if TTkHelper._rootCanvas is None:
             return
+
         # Build a list of buffers to be repainted
         updateBuffers = TTkHelper._updateBuffer.copy()
         updateWidgets = TTkHelper._updateWidget.copy()
@@ -439,12 +445,14 @@ class TTkHelper:
         if pushToTerminal:
             if TTkHelper._cursor:
                 lbt.Term.hideCursor()
-            TTkHelper._rootCanvas.pushToTerminal(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
+            if TTkCfg.doubleBuffer:
+                TTkHelper._rootCanvas.pushToTerminalBuffered(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
+            else:
+                TTkHelper._rootCanvas.pushToTerminal(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
             if TTkHelper._cursor:
                 x,y = TTkHelper._cursorPos
                 lbt.Term.push(lbt.Mv.to(y+1,x+1))
                 lbt.Term.showCursor(TTkHelper._cursorType)
-
 
     @staticmethod
     def widgetDepth(widget) -&gt; int:
@@ -760,6 +768,7 @@ def paintAll():
     &#39;&#39;&#39;
     if TTkHelper._rootCanvas is None:
         return
+
     # Build a list of buffers to be repainted
     updateBuffers = TTkHelper._updateBuffer.copy()
     updateWidgets = TTkHelper._updateWidget.copy()
@@ -814,7 +823,10 @@ def paintAll():
     if pushToTerminal:
         if TTkHelper._cursor:
             lbt.Term.hideCursor()
-        TTkHelper._rootCanvas.pushToTerminal(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
+        if TTkCfg.doubleBuffer:
+            TTkHelper._rootCanvas.pushToTerminalBuffered(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
+        else:
+            TTkHelper._rootCanvas.pushToTerminal(0, 0, TTkGlbl.term_w, TTkGlbl.term_h)
         if TTkHelper._cursor:
             x,y = TTkHelper._cursorPos
             lbt.Term.push(lbt.Mv.to(y+1,x+1))
@@ -833,6 +845,7 @@ def paintAll():
 <pre><code class="python">@staticmethod
 def registerRootCanvas(canvas):
     TTkHelper._rootCanvas = canvas
+    TTkHelper._rootCanvas.enableDoubleBuffer()
     TTkHelper._updateBuffer = []
     TTkHelper._updateWidget = []</code></pre>
 </details>
