--- a/TTkCore/index.html
+++ b/TTkCore/index.html
@@ -57,6 +57,10 @@ from .timer import *</code></pre>
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="TermTk.TTkCore.filebuffer" href="filebuffer.html">TermTk.TTkCore.filebuffer</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="TermTk.TTkCore.helper" href="helper.html">TermTk.TTkCore.helper</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -104,6 +108,7 @@ from .timer import *</code></pre>
 <li><code><a title="TermTk.TTkCore.color" href="color.html">TermTk.TTkCore.color</a></code></li>
 <li><code><a title="TermTk.TTkCore.constant" href="constant.html">TermTk.TTkCore.constant</a></code></li>
 <li><code><a title="TermTk.TTkCore.draw" href="draw.html">TermTk.TTkCore.draw</a></code></li>
+<li><code><a title="TermTk.TTkCore.filebuffer" href="filebuffer.html">TermTk.TTkCore.filebuffer</a></code></li>
 <li><code><a title="TermTk.TTkCore.helper" href="helper.html">TermTk.TTkCore.helper</a></code></li>
 <li><code><a title="TermTk.TTkCore.log" href="log.html">TermTk.TTkCore.log</a></code></li>
 <li><code><a title="TermTk.TTkCore.signal" href="signal.html">TermTk.TTkCore.signal</a></code></li>
