--- a/TTkWidgets/splitter.html
+++ b/TTkWidgets/splitter.html
@@ -57,11 +57,16 @@ from TermTk.TTkWidgets.widget import *
 from TermTk.TTkWidgets.frame import *
 
 class TTkSplitter(TTkFrame):
-    __slots__ = (&#39;_splitterInitialized&#39;, &#39;_orientation&#39;,&#39;_separators&#39;, &#39;_separatorSelected&#39;, &#39;_mouseDelta&#39;)
+    __slots__ = (
+        &#39;_splitterInitialized&#39;, &#39;_orientation&#39;,
+        &#39;_separators&#39;, &#39;_separatorsRef&#39;, &#39;_sizeRef&#39;,
+        &#39;_separatorSelected&#39;, &#39;_mouseDelta&#39;)
     def __init__(self, *args, **kwargs):
         self._splitterInitialized = False
         # self._splitterInitialized = True
         self._separators = []
+        self._separatorsRef = []
+        self._sizeRef = 0
         self._separatorSelected = None
         self._orientation = TTkK.HORIZONTAL
         TTkFrame.__init__(self, *args, **kwargs)
@@ -86,6 +91,8 @@ class TTkSplitter(TTkFrame):
             newSep = -1
         self._separators.append(newSep)
         self._updateGeometries()
+        self._separatorsRef = self._separators
+        self._sizeRef = fullSize
 
     def _minMaxSizeBefore(self, index):
         if self._separatorSelected is None:
@@ -111,6 +118,7 @@ class TTkSplitter(TTkFrame):
         return minsize, maxsize
 
     def _updateGeometries(self):
+        if not self.isVisible(): return
         _,_,w,h = self.geometry()
         sep = self._separators
         x,y=0,0
@@ -168,7 +176,19 @@ class TTkSplitter(TTkFrame):
         for i in range(selected, len(sep)):
             _processGeometry(i, True)
 
+        if self._separatorSelected is not None or self._sizeRef==0:
+            self._separatorsRef = self._separators
+            self._sizeRef = size
+
     def resizeEvent(self, w, h):
+        # Adjust separators to the new size;
+        self._separatorSelected = None
+        if self._sizeRef &gt; 0:
+            if self._orientation == TTkK.HORIZONTAL:
+                diff = w/self._sizeRef
+            else:
+                diff = h/self._sizeRef
+            self._separators = [int(i*diff) for i in self._separatorsRef]
         self._updateGeometries()
 
     def paintEvent(self):
@@ -343,11 +363,16 @@ class TTkSplitter(TTkFrame):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">class TTkSplitter(TTkFrame):
-    __slots__ = (&#39;_splitterInitialized&#39;, &#39;_orientation&#39;,&#39;_separators&#39;, &#39;_separatorSelected&#39;, &#39;_mouseDelta&#39;)
+    __slots__ = (
+        &#39;_splitterInitialized&#39;, &#39;_orientation&#39;,
+        &#39;_separators&#39;, &#39;_separatorsRef&#39;, &#39;_sizeRef&#39;,
+        &#39;_separatorSelected&#39;, &#39;_mouseDelta&#39;)
     def __init__(self, *args, **kwargs):
         self._splitterInitialized = False
         # self._splitterInitialized = True
         self._separators = []
+        self._separatorsRef = []
+        self._sizeRef = 0
         self._separatorSelected = None
         self._orientation = TTkK.HORIZONTAL
         TTkFrame.__init__(self, *args, **kwargs)
@@ -372,6 +397,8 @@ class TTkSplitter(TTkFrame):
             newSep = -1
         self._separators.append(newSep)
         self._updateGeometries()
+        self._separatorsRef = self._separators
+        self._sizeRef = fullSize
 
     def _minMaxSizeBefore(self, index):
         if self._separatorSelected is None:
@@ -397,6 +424,7 @@ class TTkSplitter(TTkFrame):
         return minsize, maxsize
 
     def _updateGeometries(self):
+        if not self.isVisible(): return
         _,_,w,h = self.geometry()
         sep = self._separators
         x,y=0,0
@@ -454,7 +482,19 @@ class TTkSplitter(TTkFrame):
         for i in range(selected, len(sep)):
             _processGeometry(i, True)
 
+        if self._separatorSelected is not None or self._sizeRef==0:
+            self._separatorsRef = self._separators
+            self._sizeRef = size
+
     def resizeEvent(self, w, h):
+        # Adjust separators to the new size;
+        self._separatorSelected = None
+        if self._sizeRef &gt; 0:
+            if self._orientation == TTkK.HORIZONTAL:
+                diff = w/self._sizeRef
+            else:
+                diff = h/self._sizeRef
+            self._separators = [int(i*diff) for i in self._separatorsRef]
         self._updateGeometries()
 
     def paintEvent(self):
@@ -683,7 +723,6 @@ class TTkSplitter(TTkFrame):
 <li><code><a title="TermTk.TTkWidgets.frame.TTkFrame.moveEvent" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget.moveEvent">moveEvent</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.frame.TTkFrame.paintChildCanvas" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget.paintChildCanvas">paintChildCanvas</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.frame.TTkFrame.paintEvent" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget.paintEvent">paintEvent</a></code></li>
-<li><code><a title="TermTk.TTkWidgets.frame.TTkFrame.paintNotifyParent" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget.paintNotifyParent">paintNotifyParent</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.frame.TTkFrame.removeWidget" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget.removeWidget">removeWidget</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.frame.TTkFrame.resize" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget.resize">resize</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.frame.TTkFrame.resizeEvent" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget.resizeEvent">resizeEvent</a></code></li>
