--- a/libbpytop/input.html
+++ b/libbpytop/input.html
@@ -50,7 +50,7 @@ from select import select
 from time import time, sleep, strftime, localtime
 from typing import TextIO, List, Set, Dict, Tuple, Optional, Union, Any, Callable, ContextManager, Iterable, Type, NamedTuple
 
-try: import fcntl, termios, tty, pwd
+try: import fcntl, termios, tty
 except Exception as e:
     print(f&#39;ERROR: {e}&#39;)
     exit(1)
