--- a/TTkCore/ttk.html
+++ b/TTkCore/ttk.html
@@ -81,8 +81,11 @@ class TTk(TTkWidget):
         self.screen_events = queue.Queue()
         self.setFocusPolicy(TTkK.ClickFocus)
         self.hide()
-        size = os.get_terminal_size()
-        self.setGeometry(0,0,size.columns,size.lines)
+        try:
+            size = os.get_terminal_size()
+            self.setGeometry(0,0,size.columns,size.lines)
+        except OSError as e:
+            print(f&#39;ERROR: {e}&#39;)
         TTkCfg.theme = TTkTheme()
         TTkHelper.registerRootCanvas(self._canvas)
 
@@ -328,8 +331,11 @@ class TTk(TTkWidget):
         self.screen_events = queue.Queue()
         self.setFocusPolicy(TTkK.ClickFocus)
         self.hide()
-        size = os.get_terminal_size()
-        self.setGeometry(0,0,size.columns,size.lines)
+        try:
+            size = os.get_terminal_size()
+            self.setGeometry(0,0,size.columns,size.lines)
+        except OSError as e:
+            print(f&#39;ERROR: {e}&#39;)
         TTkCfg.theme = TTkTheme()
         TTkHelper.registerRootCanvas(self._canvas)
 
