--- a/TTkWidgets/index.html
+++ b/TTkWidgets/index.html
@@ -50,12 +50,17 @@ from .tree        import *
 from .treeview    import *
 from .treewidget  import *
 from .graph       import *
-from .menubar     import *</code></pre>
+from .menubar     import *
+from .TTkPickers  import *</code></pre>
 </details>
 </section>
 <section>
 <h2 class="section-title" id="header-submodules">Sub-modules</h2>
 <dl>
+<dt><code class="name"><a title="TermTk.TTkWidgets.TTkPickers" href="TTkPickers/index.html">TermTk.TTkWidgets.TTkPickers</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="TermTk.TTkWidgets.button" href="button.html">TermTk.TTkWidgets.button</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -182,6 +187,7 @@ from .menubar     import *</code></pre>
 </li>
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
+<li><code><a title="TermTk.TTkWidgets.TTkPickers" href="TTkPickers/index.html">TermTk.TTkWidgets.TTkPickers</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.button" href="button.html">TermTk.TTkWidgets.button</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.checkbox" href="checkbox.html">TermTk.TTkWidgets.checkbox</a></code></li>
 <li><code><a title="TermTk.TTkWidgets.combobox" href="combobox.html">TermTk.TTkWidgets.combobox</a></code></li>
