--- a/TTkWidgets/widget.html
+++ b/TTkWidgets/widget.html
@@ -1232,6 +1232,9 @@ class TTkWidget(TMouseEvents,TKeyEvents):
 <li><a title="TermTk.TTkAbstract.abstractscrollview.TTkAbstractScrollView" href="../TTkAbstract/abstractscrollview.html#TermTk.TTkAbstract.abstractscrollview.TTkAbstractScrollView">TTkAbstractScrollView</a></li>
 <li><a title="TermTk.TTkCore.ttk.TTk" href="../TTkCore/ttk.html#TermTk.TTkCore.ttk.TTk">TTk</a></li>
 <li>TermTk.TTkTestWidgets.testwidget._TestContent</li>
+<li>TermTk.TTkWidgets.TTkPickers.colorpicker._TTkColorCanvas</li>
+<li>TermTk.TTkWidgets.TTkPickers.colorpicker._TTkHueCanvas</li>
+<li>TermTk.TTkWidgets.TTkPickers.colorpicker._TTkShowColor</li>
 <li><a title="TermTk.TTkWidgets.button.TTkButton" href="button.html#TermTk.TTkWidgets.button.TTkButton">TTkButton</a></li>
 <li><a title="TermTk.TTkWidgets.checkbox.TTkCheckbox" href="checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox">TTkCheckbox</a></li>
 <li><a title="TermTk.TTkWidgets.combobox.TTkComboBox" href="combobox.html#TermTk.TTkWidgets.combobox.TTkComboBox">TTkComboBox</a></li>
