--- a/TTkWidgets/lineedit.html
+++ b/TTkWidgets/lineedit.html
@@ -91,6 +91,7 @@ class TTkLineEdit(TTkWidget):
         if text != self._text:
             self.textChanged.emit(text)
             self._text = text
+            self.update()
 
     def text(self):
         return self._text
@@ -293,6 +294,7 @@ class TTkLineEdit(TTkWidget):
         if text != self._text:
             self.textChanged.emit(text)
             self._text = text
+            self.update()
 
     def text(self):
         return self._text
@@ -451,7 +453,8 @@ class TTkLineEdit(TTkWidget):
 <pre><code class="python">def setText(self, text):
     if text != self._text:
         self.textChanged.emit(text)
-        self._text = text</code></pre>
+        self._text = text
+        self.update()</code></pre>
 </details>
 </dd>
 <dt id="TermTk.TTkWidgets.lineedit.TTkLineEdit.text"><code class="name flex">
