--- a/TTkWidgets/splitter.html
+++ b/TTkWidgets/splitter.html
@@ -79,17 +79,14 @@ class TTkSplitter(TTkFrame):
     def addWidget(self, widget, size=None):
         TTkFrame.addWidget(self, widget)
         _,_,w,h = self.geometry()
+        numW = self.layout().count()
 
         if self._orientation == TTkK.HORIZONTAL:
             fullSize = w
         else:
             fullSize = h
-
-        if self._separators:
-            newSep = (self._separators[-1] + fullSize)  // 2
-        else:
-            newSep = -1
-        self._separators.append(newSep)
+        # assign the same slice to all the widgets
+        self._separators = [fullSize*i//numW for i in range(1,numW+1)]
         self._updateGeometries()
         self._separatorsRef = self._separators
         self._sizeRef = fullSize
@@ -100,7 +97,7 @@ class TTkSplitter(TTkFrame):
         # this is because there is a hidden splitter at position -1
         minsize = -1
         maxsize = -1
-        for i in range(self._separatorSelected):
+        for i in range(self._separatorSelected+1):
             item = self.layout().itemAt(i)
             minsize += item.minDimension(self._orientation)+1
             maxsize += item.maxDimension(self._orientation)+1
@@ -111,13 +108,13 @@ class TTkSplitter(TTkFrame):
             return 0, 0x1000
         minsize = 0x0
         maxsize = 0x0
-        for i in range(self._separatorSelected, len(self._separators)):
+        for i in range(self._separatorSelected+1, len(self._separators)):
             item = self.layout().itemAt(i)
             minsize += item.minDimension(self._orientation)+1
             maxsize += item.maxDimension(self._orientation)+1
         return minsize, maxsize
 
-    def _updateGeometries(self):
+    def _updateGeometries(self, resized=False):
         if not self.isVisible(): return
         _,_,w,h = self.geometry()
         sep = self._separators
@@ -125,29 +122,31 @@ class TTkSplitter(TTkFrame):
 
         def _processGeometry(index, forward):
             item = self.layout().itemAt(i)
+            pa = -1 if i==0 else sep[i-1]
+            pb = sep[i]
 
             if self._orientation == TTkK.HORIZONTAL:
-                newPos  = sep[i]+1
+                newPos = pa+1
                 size = w-newPos
             else:
-                newPos = sep[i]+1
+                newPos = pa+1
                 size = h-newPos
 
             if i&lt;=len(sep)-2: # this is not the last widget
-                size = sep[i+1]-newPos
+                size = pb-newPos
                 maxsize = item.maxDimension(self._orientation)
                 minsize = item.minDimension(self._orientation)
                 if   size &gt; maxsize: size = maxsize
                 elif size &lt; minsize: size = minsize
                 if forward:
-                    sep[i+1]=sep[i]+size+1
-                else:
-                    sep[i]=sep[i+1]-size-1
+                    sep[i]=pa+size+1
+                elif i&gt;0 :
+                    sep[i-1]=pa=pb-size-1
 
             if self._orientation == TTkK.HORIZONTAL:
-                item.setGeometry(sep[i]+1,0,size,h)
+                item.setGeometry(pa+1,0,size,h)
             else:
-                item.setGeometry(0,sep[i]+1,w,size)
+                item.setGeometry(0,pa+1,w,size)
             pass
 
 
@@ -168,13 +167,17 @@ class TTkSplitter(TTkFrame):
             if sepPos &lt; size-maxsize: sep[selected] = size-maxsize
             if sepPos &gt; size-minsize: sep[selected] = size-minsize
 
-        forward = False
-        for i in reversed(range(selected)):
-            _processGeometry(i, False)
-
-        forward = True
-        for i in range(selected, len(sep)):
-            _processGeometry(i, True)
+        if resized:
+            l = len(sep)
+            for i in reversed(range(l)):
+                _processGeometry(i, False)
+            for i in range(l):
+                _processGeometry(i, True)
+        else:
+            for i in reversed(range(selected+1)):
+                _processGeometry(i, False)
+            for i in range(selected+1, len(sep)):
+                _processGeometry(i, True)
 
         if self._separatorSelected is not None or self._sizeRef==0:
             self._separatorsRef = self._separators
@@ -189,7 +192,7 @@ class TTkSplitter(TTkFrame):
             else:
                 diff = h/self._sizeRef
             self._separators = [int(i*diff) for i in self._separatorsRef]
-        self._updateGeometries()
+        self._updateGeometries(resized=True)
 
     def paintEvent(self):
         w,h = self.size()
@@ -235,53 +238,57 @@ class TTkSplitter(TTkFrame):
 
     def minimumHeight(self) -&gt; int:
         if not self._splitterInitialized: return 0
-        min = 0
+        ret = 0
         if self._orientation == TTkK.VERTICAL:
             for item in self.layout().children():
-                min+=item.minimumHeight()
+                ret+=item.minimumHeight()+1
+            ret = max(0,ret-1)
         else:
             for item in self.layout().children():
-                if min &lt; item.minimumHeight():
-                    min = item.minimumHeight()
-        return min
+                if ret &lt; item.minimumHeight():
+                    ret = item.minimumHeight()
+        return ret
 
     def minimumWidth(self)  -&gt; int:
         if not self._splitterInitialized: return 0
-        min = 0
+        ret = 0
         if self._orientation == TTkK.HORIZONTAL:
             for item in self.layout().children():
-                min+=item.minimumWidth()
+                ret+=item.minimumWidth()+1
+            ret = max(0,ret-1)
         else:
             for item in self.layout().children():
-                if min &lt; item.minimumWidth():
-                    min = item.minimumWidth()
-        return min
+                if ret &lt; item.minimumWidth():
+                    ret = item.minimumWidth()
+        return ret
 
     def maximumHeight(self) -&gt; int:
         if not self._splitterInitialized: return 0x10000
         if self._orientation == TTkK.VERTICAL:
-            max = 0
+            ret = 0
             for item in self.layout().children():
-                max+=item.maximumHeight()
+                ret+=item.maximumHeight()+1
+            ret = max(0,ret-1)
         else:
-            max = 0x10000
+            ret = 0x10000
             for item in self.layout().children():
-                if max &gt; item.maximumHeight():
-                    max = item.maximumHeight()
-        return max
+                if ret &gt; item.maximumHeight():
+                    ret = item.maximumHeight()
+        return ret
 
     def maximumWidth(self)  -&gt; int:
         if not self._splitterInitialized: return 0x10000
         if self._orientation == TTkK.HORIZONTAL:
-            max = 0
+            ret = 0
             for item in self.layout().children():
-                max+=item.maximumHeight()
+                ret+=item.maximumHeight()+1
+            ret = max(0,ret-1)
         else:
-            max = 0x10000
+            ret = 0x10000
             for item in self.layout().children():
-                if max &gt; item.maximumWidth():
-                    max = item.maximumWidth()
-        return max</code></pre>
+                if ret &gt; item.maximumWidth():
+                    ret = item.maximumWidth()
+        return ret</code></pre>
 </details>
 </section>
 <section>
@@ -385,17 +392,14 @@ class TTkSplitter(TTkFrame):
     def addWidget(self, widget, size=None):
         TTkFrame.addWidget(self, widget)
         _,_,w,h = self.geometry()
+        numW = self.layout().count()
 
         if self._orientation == TTkK.HORIZONTAL:
             fullSize = w
         else:
             fullSize = h
-
-        if self._separators:
-            newSep = (self._separators[-1] + fullSize)  // 2
-        else:
-            newSep = -1
-        self._separators.append(newSep)
+        # assign the same slice to all the widgets
+        self._separators = [fullSize*i//numW for i in range(1,numW+1)]
         self._updateGeometries()
         self._separatorsRef = self._separators
         self._sizeRef = fullSize
@@ -406,7 +410,7 @@ class TTkSplitter(TTkFrame):
         # this is because there is a hidden splitter at position -1
         minsize = -1
         maxsize = -1
-        for i in range(self._separatorSelected):
+        for i in range(self._separatorSelected+1):
             item = self.layout().itemAt(i)
             minsize += item.minDimension(self._orientation)+1
             maxsize += item.maxDimension(self._orientation)+1
@@ -417,13 +421,13 @@ class TTkSplitter(TTkFrame):
             return 0, 0x1000
         minsize = 0x0
         maxsize = 0x0
-        for i in range(self._separatorSelected, len(self._separators)):
+        for i in range(self._separatorSelected+1, len(self._separators)):
             item = self.layout().itemAt(i)
             minsize += item.minDimension(self._orientation)+1
             maxsize += item.maxDimension(self._orientation)+1
         return minsize, maxsize
 
-    def _updateGeometries(self):
+    def _updateGeometries(self, resized=False):
         if not self.isVisible(): return
         _,_,w,h = self.geometry()
         sep = self._separators
@@ -431,29 +435,31 @@ class TTkSplitter(TTkFrame):
 
         def _processGeometry(index, forward):
             item = self.layout().itemAt(i)
+            pa = -1 if i==0 else sep[i-1]
+            pb = sep[i]
 
             if self._orientation == TTkK.HORIZONTAL:
-                newPos  = sep[i]+1
+                newPos = pa+1
                 size = w-newPos
             else:
-                newPos = sep[i]+1
+                newPos = pa+1
                 size = h-newPos
 
             if i&lt;=len(sep)-2: # this is not the last widget
-                size = sep[i+1]-newPos
+                size = pb-newPos
                 maxsize = item.maxDimension(self._orientation)
                 minsize = item.minDimension(self._orientation)
                 if   size &gt; maxsize: size = maxsize
                 elif size &lt; minsize: size = minsize
                 if forward:
-                    sep[i+1]=sep[i]+size+1
-                else:
-                    sep[i]=sep[i+1]-size-1
+                    sep[i]=pa+size+1
+                elif i&gt;0 :
+                    sep[i-1]=pa=pb-size-1
 
             if self._orientation == TTkK.HORIZONTAL:
-                item.setGeometry(sep[i]+1,0,size,h)
+                item.setGeometry(pa+1,0,size,h)
             else:
-                item.setGeometry(0,sep[i]+1,w,size)
+                item.setGeometry(0,pa+1,w,size)
             pass
 
 
@@ -474,13 +480,17 @@ class TTkSplitter(TTkFrame):
             if sepPos &lt; size-maxsize: sep[selected] = size-maxsize
             if sepPos &gt; size-minsize: sep[selected] = size-minsize
 
-        forward = False
-        for i in reversed(range(selected)):
-            _processGeometry(i, False)
-
-        forward = True
-        for i in range(selected, len(sep)):
-            _processGeometry(i, True)
+        if resized:
+            l = len(sep)
+            for i in reversed(range(l)):
+                _processGeometry(i, False)
+            for i in range(l):
+                _processGeometry(i, True)
+        else:
+            for i in reversed(range(selected+1)):
+                _processGeometry(i, False)
+            for i in range(selected+1, len(sep)):
+                _processGeometry(i, True)
 
         if self._separatorSelected is not None or self._sizeRef==0:
             self._separatorsRef = self._separators
@@ -495,7 +505,7 @@ class TTkSplitter(TTkFrame):
             else:
                 diff = h/self._sizeRef
             self._separators = [int(i*diff) for i in self._separatorsRef]
-        self._updateGeometries()
+        self._updateGeometries(resized=True)
 
     def paintEvent(self):
         w,h = self.size()
@@ -541,53 +551,57 @@ class TTkSplitter(TTkFrame):
 
     def minimumHeight(self) -&gt; int:
         if not self._splitterInitialized: return 0
-        min = 0
+        ret = 0
         if self._orientation == TTkK.VERTICAL:
             for item in self.layout().children():
-                min+=item.minimumHeight()
+                ret+=item.minimumHeight()+1
+            ret = max(0,ret-1)
         else:
             for item in self.layout().children():
-                if min &lt; item.minimumHeight():
-                    min = item.minimumHeight()
-        return min
+                if ret &lt; item.minimumHeight():
+                    ret = item.minimumHeight()
+        return ret
 
     def minimumWidth(self)  -&gt; int:
         if not self._splitterInitialized: return 0
-        min = 0
+        ret = 0
         if self._orientation == TTkK.HORIZONTAL:
             for item in self.layout().children():
-                min+=item.minimumWidth()
+                ret+=item.minimumWidth()+1
+            ret = max(0,ret-1)
         else:
             for item in self.layout().children():
-                if min &lt; item.minimumWidth():
-                    min = item.minimumWidth()
-        return min
+                if ret &lt; item.minimumWidth():
+                    ret = item.minimumWidth()
+        return ret
 
     def maximumHeight(self) -&gt; int:
         if not self._splitterInitialized: return 0x10000
         if self._orientation == TTkK.VERTICAL:
-            max = 0
+            ret = 0
             for item in self.layout().children():
-                max+=item.maximumHeight()
+                ret+=item.maximumHeight()+1
+            ret = max(0,ret-1)
         else:
-            max = 0x10000
+            ret = 0x10000
             for item in self.layout().children():
-                if max &gt; item.maximumHeight():
-                    max = item.maximumHeight()
-        return max
+                if ret &gt; item.maximumHeight():
+                    ret = item.maximumHeight()
+        return ret
 
     def maximumWidth(self)  -&gt; int:
         if not self._splitterInitialized: return 0x10000
         if self._orientation == TTkK.HORIZONTAL:
-            max = 0
+            ret = 0
             for item in self.layout().children():
-                max+=item.maximumHeight()
+                ret+=item.maximumHeight()+1
+            ret = max(0,ret-1)
         else:
-            max = 0x10000
+            ret = 0x10000
             for item in self.layout().children():
-                if max &gt; item.maximumWidth():
-                    max = item.maximumWidth()
-        return max</code></pre>
+                if ret &gt; item.maximumWidth():
+                    ret = item.maximumWidth()
+        return ret</code></pre>
 </details>
 <h3>Ancestors</h3>
 <ul class="hlist">
@@ -623,15 +637,16 @@ class TTkSplitter(TTkFrame):
 <pre><code class="python">def maximumHeight(self) -&gt; int:
     if not self._splitterInitialized: return 0x10000
     if self._orientation == TTkK.VERTICAL:
-        max = 0
+        ret = 0
         for item in self.layout().children():
-            max+=item.maximumHeight()
+            ret+=item.maximumHeight()+1
+        ret = max(0,ret-1)
     else:
-        max = 0x10000
+        ret = 0x10000
         for item in self.layout().children():
-            if max &gt; item.maximumHeight():
-                max = item.maximumHeight()
-    return max</code></pre>
+            if ret &gt; item.maximumHeight():
+                ret = item.maximumHeight()
+    return ret</code></pre>
 </details>
 </dd>
 <dt id="TermTk.TTkWidgets.splitter.TTkSplitter.maximumWidth"><code class="name flex">
@@ -646,15 +661,16 @@ class TTkSplitter(TTkFrame):
 <pre><code class="python">def maximumWidth(self)  -&gt; int:
     if not self._splitterInitialized: return 0x10000
     if self._orientation == TTkK.HORIZONTAL:
-        max = 0
+        ret = 0
         for item in self.layout().children():
-            max+=item.maximumHeight()
+            ret+=item.maximumHeight()+1
+        ret = max(0,ret-1)
     else:
-        max = 0x10000
+        ret = 0x10000
         for item in self.layout().children():
-            if max &gt; item.maximumWidth():
-                max = item.maximumWidth()
-    return max</code></pre>
+            if ret &gt; item.maximumWidth():
+                ret = item.maximumWidth()
+    return ret</code></pre>
 </details>
 </dd>
 <dt id="TermTk.TTkWidgets.splitter.TTkSplitter.minimumHeight"><code class="name flex">
@@ -668,15 +684,16 @@ class TTkSplitter(TTkFrame):
 </summary>
 <pre><code class="python">def minimumHeight(self) -&gt; int:
     if not self._splitterInitialized: return 0
-    min = 0
+    ret = 0
     if self._orientation == TTkK.VERTICAL:
         for item in self.layout().children():
-            min+=item.minimumHeight()
+            ret+=item.minimumHeight()+1
+        ret = max(0,ret-1)
     else:
         for item in self.layout().children():
-            if min &lt; item.minimumHeight():
-                min = item.minimumHeight()
-    return min</code></pre>
+            if ret &lt; item.minimumHeight():
+                ret = item.minimumHeight()
+    return ret</code></pre>
 </details>
 </dd>
 <dt id="TermTk.TTkWidgets.splitter.TTkSplitter.minimumWidth"><code class="name flex">
@@ -690,15 +707,16 @@ class TTkSplitter(TTkFrame):
 </summary>
 <pre><code class="python">def minimumWidth(self)  -&gt; int:
     if not self._splitterInitialized: return 0
-    min = 0
+    ret = 0
     if self._orientation == TTkK.HORIZONTAL:
         for item in self.layout().children():
-            min+=item.minimumWidth()
+            ret+=item.minimumWidth()+1
+        ret = max(0,ret-1)
     else:
         for item in self.layout().children():
-            if min &lt; item.minimumWidth():
-                min = item.minimumWidth()
-    return min</code></pre>
+            if ret &lt; item.minimumWidth():
+                ret = item.minimumWidth()
+    return ret</code></pre>
 </details>
 </dd>
 </dl>
