--- a/TTkWidgets/window.html
+++ b/TTkWidgets/window.html
@@ -50,8 +50,8 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-from TermTk.TTkCore.cfg import *
-from TermTk.TTkCore.constant import *
+from TermTk.TTkCore.cfg import TTkCfg
+from TermTk.TTkCore.constant import TTkK
 from TermTk.TTkCore.log import TTkLog
 from TermTk.TTkCore.color import TTkColor
 from TermTk.TTkWidgets.resizableframe import TTkResizableFrame
@@ -72,9 +72,9 @@ class TTkWindow(TTkResizableFrame):
 
     def paintEvent(self):
         if self.hasFocus():
-            color = TTkColor.fg(&#34;#ffff55&#34;)
+            color = TTkCfg.theme.windowBorderColorFocus
         else:
-            color = TTkColor.RST
+            color = TTkCfg.theme.windowBorderColor
         self._canvas.drawText(pos=(2,1),text=self._title)
         self._canvas.drawGrid(
                     color=color,
@@ -204,9 +204,9 @@ class TTkWindow(TTkResizableFrame):
 
     def paintEvent(self):
         if self.hasFocus():
-            color = TTkColor.fg(&#34;#ffff55&#34;)
+            color = TTkCfg.theme.windowBorderColorFocus
         else:
-            color = TTkColor.RST
+            color = TTkCfg.theme.windowBorderColor
         self._canvas.drawText(pos=(2,1),text=self._title)
         self._canvas.drawGrid(
                     color=color,
@@ -250,6 +250,10 @@ class TTkWindow(TTkResizableFrame):
 <li><a title="TermTk.TTkWidgets.widget.TTkWidget" href="widget.html#TermTk.TTkWidgets.widget.TTkWidget">TTkWidget</a></li>
 <li><a title="TermTk.TTkTemplates.mouseevents.TMouseEvents" href="../TTkTemplates/mouseevents.html#TermTk.TTkTemplates.mouseevents.TMouseEvents">TMouseEvents</a></li>
 <li><a title="TermTk.TTkTemplates.keyevents.TKeyEvents" href="../TTkTemplates/keyevents.html#TermTk.TTkTemplates.keyevents.TKeyEvents">TKeyEvents</a></li>
+</ul>
+<h3>Subclasses</h3>
+<ul class="hlist">
+<li><a title="TermTk.TTkWidgets.TTkPickers.colorpicker.TTkColorDialogPicker" href="TTkPickers/colorpicker.html#TermTk.TTkWidgets.TTkPickers.colorpicker.TTkColorDialogPicker">TTkColorDialogPicker</a></li>
 </ul>
 <h3>Methods</h3>
 <dl>
